--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 
             </div>
             <div class="header-logo">
+                <div class="img-circle">
+                    <img src="img/vbuck.png" style="width: 20%;">
+                </div>
                 
             </div>
             <div class="header-link">
