--- a/Car77/index/index.html
+++ b/Car77/index/index.html
@@ -122,17 +122,27 @@
 
       <div class="footer">
         <div class="footerCard">
-            <h1>Find Us</h1>
+            <div class="fContainer">
+                <h1>Find Us</h1>
+                <h3> sdfjspdkjf  </h3>
+            </div>
+            
         </div>
+
         <div class="FooterCard">
-            <h1>Find Us</h1>
+            <div class="fContainer">
+                <h1>Services</h1>
+                <h3>  fdshoisdfh </h3>
+            </div>
         </div>
+
         <div class="footerCard">
-            <h1>Find Us</h1>
+            <div class="fContainer">
+                <h1>About</h1>
+                <h3> jdfkjdsk  </h3>
+            </div>
         </div>
-        <div class="FooterCard">
-            <h1>Find Us</h1>
-        </div>
+        
 
       </div>
 </body>
